--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ a {
     position: fixed;
     height: 80px;
     width: 100%;
-    /* background: violet; */
+    /* background: purple; */
     z-index: 100;
     padding: 0 20px;
 }
@@ -22,7 +22,7 @@ a {
 .nav {
     max-width: 1100px;
     width: 100%;
-    /* background: pink; */
+    /* background: violet; */
     margin: 0 auto;
 }
 
@@ -35,13 +35,42 @@ a {
 }
 
 .nav_logo {
-    font-size: 28px;
+    font-size: 36px;
 }
 
 .nav_item {
     column-gap: 25px;
 }
 
+.nav_logo,
+.nav_link, 
+.button {
+    color: #fff
+}
+
 .nav_link:hover {
     color: #d9d9d9;
+}
+
+.button {
+    padding: 6px 24px;
+    border: 2px solid #fff;
+    background: transparent;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.button:active{
+    transform: scale(0.98);
+}
+
+/* ------------------------------------------------ */
+
+.home {
+   position: relative;
+   height: 100vh;
+   width: 100%;
+   background-image: url("img/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDI0LTAzL3Jhd3BpeGVsX29mZmljZV81Ml9hX21pbmltYWxfYW5kX2xlc3NfZGV0YWlsX2lsbHVzdHJhdGlvbl9vZl93b19hMTQwZDZjNS01MWJiLTQ0MWUtODBhYS03ZDE5YTFmNzM2YjMuanBn.png");
+   background-size: cover;
+   background-position: center;
 }
