--- a/style.css
+++ b/style.css
@@ -57,10 +57,12 @@ a {
 
 .button {
     padding: 6px 24px;
-    border: 2px solid #fff;
+    border: 3px solid #fff;
     background: transparent;
     border-radius: 6px;
     cursor: pointer;
+    font-size: 24px;
+    font-weight: 600;
 }
 
 .button:active{
