--- a/style.css
+++ b/style.css
@@ -80,22 +80,58 @@ a {
    background-position: center;
 }
 
+.home::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 100;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.5s ease-out;
+}
+
+.home.show::before {
+    opacity: 1;
+    pointer-events: auto;
+}
+
 .form_container {
     position: absolute;
     max-width: 320px;
     width: 100%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1.2);
     z-index: 101;
     background: #fff;
     padding: 25px;
     border-radius: 12.5px;
     box-shadow: rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.4s ease-out;
+}
+
+.home.show .form_container {
+   opacity: 1;
+   pointer-events: auto;
+   transform: translate(-50%, -50%) scale(1);
 }
 
 .signup_form {
     display: none;
+}
+
+.form_container.active .signup_form{
+    display: block;
+
+}
+
+.form_container.active .login_form{
+    display: none;
+    
 }
 
 .form_close {
@@ -157,6 +193,7 @@ a {
 .input_box i.pw_hide{
     right: 0;
     font-size: 18px;
+    cursor: pointer;
 }
 
 .option_field {
